# RH-Wallet

./: .dockerignore  .env.example  .gitignore  Dockerfile  RAILWAY.md  README.md  RHAGENT-BUYBACK.md  bankr.x402.json  docker-compose.yml  railway.toml
.github/workflows/: connect-desktop-release.yml
.proofofdev/: claim.json
bankr-app/: index.html  manifest.json
bankr-app/scripts/: checkStatus.ts
gateway/: Dockerfile  README.md  pyproject.toml
gateway/app/: __init__.py  agentic_inject.py  auth.py  config.py  database.py  deps.py  main.py  models.py  redact.py  rh_client.py  rhagents.py  signing.py  tenant_models.py  tenant_service.py  vault.py
gateway/app/routes/: account.py  agentic.py  catalog.py  connect.py  market.py  orders.py  setup.py
gateway/tests/: test_agentic_inject.py  test_api.py  test_redact.py  test_rh_client.py  test_signature.py
scripts/: agentic_oauth.py  generate_rh_keypair.py  rh-connect.sh
skill/: SKILL.md  catalog.json
skill/references/: AGENTIC-CAPABILITIES.md  AGENTIC-TRADING.md  GETTING-STARTED.md  RESPONSE-SAFETY.md  WALLET-ROUTING.md  agentic-connect.md  api-reference.md  hosted-config.md  setup.md  trading-safety.md  x402-agentic.md  x402.md
x402/rh-account/: index.ts
x402/rh-agentic-mcp/: index.ts
x402/rh-buy/: index.ts
x402/rh-order/: index.ts
x402/rh-prices/: index.ts
